--- a/index.html
+++ b/index.html
@@ -99,18 +99,44 @@
             <div data-page="index" class="page">
                 <!-- Scrollable page content -->
                 <div class="page-content">
-                    <p>Page content goes here</p>
+                    <!-- Tabs wrapper, shoud have "tabs" class. Required element -->
+                    <div class="tabs">
+                        <!-- First tab, should have "tab" class and unique id attribute -->
+                        <!-- First tab is active by default - additional "active" class -->
+                        <div class="tab active" id="tab1">
+                            ... Tab 1 content goes here ...
+                        </div>
+                        <!-- Second tab, should have "tab" class and unique id attribute -->
+                        <div class="tab" id="tab2">
+                            ... Tab 2 content goes here ...
+                        </div>
+                        <!-- Third tab, should have "tab" class and unique id attribute -->
+                        <div class="tab" id="tab3">
+                            ... Tab 3 content goes here ...
+                        </div>
+                    </div>
                     <!-- Link to another page -->
                     <a href="about.html">About app</a>
                 </div>
             </div>
         </div>
         <!-- Bottom Toolbar-->
-        <div class="toolbar">
+        <div class="toolbar tabbar tabbar-labels">
             <div class="toolbar-inner">
-                <!-- Toolbar links -->
-                <a href="#" class="link">Link 1</a>
-                <a href="#" class="link">Link 2</a>
+                <a href="#tab1" class="tab-link active">
+                    <i class="icon icon-form-name"></i>
+                    <span class="tabbar-label">Label 1</span>
+                </a>
+                <a href="#tab2" class="tab-link">
+                    <i class="icon icon-form-calendar">
+                        <span class="badge bg-red">5</span>
+                    </i>
+                    <span class="tabbar-label">Label 2</span>
+                </a>
+                <a href="#tab3" class="tab-link">
+                    <i class="icon icon-form-tel"></i>
+                    <span class="tabbar-label">Label 3</span>
+                </a>
             </div>
         </div>
     </div>
