--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Path to your custom app styles-->
     <link rel="stylesheet" href="my-app.css">
 </head>
-<body class="">
+<body>
 <!-- Status bar overlay for full screen mode (PhoneGap) -->
 <div class="statusbar-overlay"></div>
 <!-- Panels overlay-->
@@ -125,17 +125,17 @@
             <div class="toolbar-inner">
                 <a href="#tab1" class="tab-link active">
                     <i class="icon icon-form-name"></i>
-                    <span class="tabbar-label">Label 1</span>
+                    <span class="tabbar-label">Page 1</span>
                 </a>
                 <a href="#tab2" class="tab-link">
                     <i class="icon icon-form-calendar">
                         <span class="badge bg-red">5</span>
                     </i>
-                    <span class="tabbar-label">Label 2</span>
+                    <span class="tabbar-label">Page 2</span>
                 </a>
                 <a href="#tab3" class="tab-link">
                     <i class="icon icon-form-tel"></i>
-                    <span class="tabbar-label">Label 3</span>
+                    <span class="tabbar-label">Page 3</span>
                 </a>
             </div>
         </div>
