--- a/about.html
+++ b/about.html
@@ -1,20 +1,18 @@
-<!-- We don't need full layout in this file because this page will be parsed with Ajax. It is just enough to put here .navbar and .page-->
-
-<!-- Top Navbar-->
-<!--<div class="navbar">-->
-    <!--<div class="navbar-inner">-->
-        <!--<div class="left">-->
-            <!--<a href="#" class="back link">-->
-                <!--<i class="icon icon-back"></i>-->
-                <!--<span>Back</span>-->
-            <!--</a>-->
-        <!--</div>-->
-        <!--<div class="center sliding">About</div>-->
-        <!--<div class="right">-->
-            <!--<a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</div>-->
+<!--Top Navbar-->
+<div class="navbar">
+    <div class="navbar-inner">
+        <div class="left">
+            <a href="#" class="back link">
+                <i class="icon icon-back"></i>
+                <span>Back</span>
+            </a>
+        </div>
+        <div class="center sliding">About</div>
+        <div class="right">
+            <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>
+        </div>
+    </div>
+</div>
 <div class="pages">
     <div data-page="about" class="page">
         <div class="page-content">
