--- a/page2.html
+++ b/page2.html
@@ -1,25 +1,18 @@
-<!-- Top Navbar-->
-<div class="navbar">
-    <div class="navbar-inner">
-        <div class="left">
-            <a href="#" class="back link">
-                <i class="icon icon-back"></i>
-                <span>Back</span>
+<div class="content-block-title">Songs</div>
+<div class="list-block media-list">
+    <ul>
+        <li>
+            <a href="#" class="item-link item-content">
+                <div class="item-media"><img src="//upload.wikimedia.org/wikipedia/en/thumb/2/29/BornToDieAlbumCover.png/220px-BornToDieAlbumCover.png" width="80"></div>
+                <div class="item-inner">
+                    <div class="item-title-row">
+                        <div class="item-title">Yellow Submarine</div>
+                        <div class="item-after">$15</div>
+                    </div>
+                    <div class="item-subtitle">Beatles</div>
+                    <div class="item-text">Lorem ipsum dolor sit amet...</div>
+                </div>
             </a>
-        </div>
-        <div class="center sliding">Page 2</div>
-        <div class="right">
-            <a href="#" class="link icon-only open-panel"><i class="icon icon-bars"></i></a>
-        </div>
-    </div>
-</div>
-
-<div class="pages">
-    <div data-page="page2" class="page">
-        <div class="page-content">
-            <div class="content-block">
-                <p>This is Page2.</p>
-            </div>
-        </div>
-    </div>
+        </li>
+    </ul>
 </div>
